Fix left/right margin on title on mobile

--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body {
  */
 h1 {
   margin-top: 0;
+  margin-left: 8px;
+  margin-right: 8px;
   padding-top: 20%;
   text-align: center;
   text-transform: uppercase;
